# Quote-Finder

./: .env.ex  .gitignore  .gitmodules  LICENSE  Quote-Finder.service  README.md  bot_main.py  config.py  main.py  maintenance_main.py  pyproject.toml  quote-finder-bot.service  quote-finder-maintenance.service  quote-finder-maintenance.timer  requirements.txt  requirements_dev.txt  requirements_prod.txt  run.sh  test.json  utils.py
Scripts/: pos-ff.sh  pos-regex.py
adapters/: book.py  dictionary.py  fichub.py
alembic/: env.py
alembic/versions/: 468cba96ea4b_add_pg_trgm_and_paragraph_index.py  721318ea70fd_add_chapter_count_to_fics_table.py  a90e97b60899_update_jobs_guild_id_to_biginteger.py  b02c3b0ac481_add_composite_index_for_paragraph_bulk_.py  c49ea3652078_add_jobs_table.py  dbf7f136ed15_add_many_to_many_ficguild_association.py  f86293e4dd13_initial_migration.py
cogs/: admin.py  book_search.py  dictionary_index.py  dictionary_search.py  help.py  search.py
data/: Black Luminary_pt.txt  POS Dictionary.json  POS Dictionary.xlsx  channels.ini  whitelist.txt
data/dictionary/: POS Dictionary.json  POS Dictionary.xlsx
database/models/: __init__.py  chapter.py  chunk.py  fic.py  job.py  paragraph.py
docs/ai/: CURRENT_STATE.md
exts/: __init__.py
exts/cogs/: book_search.py  dictionary_index.py  dictionary_search.py  help.py  settings.py
exts/utils/: channels.py
ingestion/: __init__.py  models.py  parser.py  repository.py  service.py  validator.py  worker.py
ingestion/embedding/: __init__.py  local.py  provider.py
ingestion/vector/: __init__.py  (+2 more)
scripts/: README.md  bl-regex.py  crontab  excelToJson_Dump.py  fetchCSV.sh  fetchEbook.sh  fixFormatMD.py  pos-ff.sh  pos-regex.py  timestamp.sh  updateQuoteFinderData.sh  update_bots.sh
search/: experimental_focusing.py  models.py  repository.py  reranker.py  service.py
tests/: eval_pipeline.py  eval_reranker.py  run_evals.sh  scratch_search.py  scratch_search2.py  scratch_search3.py  scratch_search4.py  test_semantic_truncation.py
ui/: admin_views.py  models.py  render.py  store.py  views.py
utils/: bot_status.py  bot_uptime.py  chapter_processing.py  embed_pages.py  excelToJson_Dump.py  finder.py  processing.py  search.py  string_processing.py  test.py
(+9 files in other folders)
