[tool.poetry]
name = "Quote-Finder"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
async-timeout = "^3.0.1"
attrs = "^21.2.0"
chardet = "^4.0.0"
"discord.py" = "^1.7.3"
Flask = "^2.0.1"
idna = "^2.10"
multidict = "^5.1.0"
portalocker = "^2.3.0"
python-dotenv = "^0.17.1"
typing-extensions = "^3.10.0"
yarl = "^1.6.3"
waitress = "^2.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
