[project]
name = "quote-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "discord-py>=2.7.1",
    "ebooklib>=0.20",
    "fastembed>=0.8.0",
    "greenlet>=3.5.2",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E711",  # SQLAlchemy requires == None / != None to generate IS NULL / IS NOT NULL SQL
    "E712",  # SQLAlchemy requires == True to generate = TRUE SQL
    "F821",  # SQLAlchemy forward-reference strings in Mapped[] are not undefined names
    "E402",  # Module-level imports not at top — intentional in alembic/env.py and parser.py
]
